update the publication pages with pdf files

--- a/publication_2014.html
+++ b/publication_2014.html
@@ -70,7 +70,7 @@ var _hmt = _hmt || [];
                         <div class="bot">
                           <div class="inner">
                             <div class="wrapper">
-                              <h4> &bull; <a href="publication.html">2017</a> &nbsp;  &bull; <a href="publication_2016.html">2016 &nbsp;</a> &nbsp; &bull; <a href="publication_2015.html"> 2015</a> &nbsp; &bull; <a href="publication_2014.html"> 2014 and before</a></h4>
+                              <h4> &bull; <a href="publication.html">2018</a> &nbsp;  &bull;  <a href="publication_2017.html">2017</a> &nbsp;  &bull; <a href="publication_2016.html">2016 &nbsp;</a> &nbsp; &bull; <a href="publication_2015.html"> 2015</a> &nbsp; &bull; <a href="publication_2014.html"> 2014 and before</a></h4>
 
 <div class="wrapper">
 <h4 class="extra"> 2014 and before </h4>
