update the index page

--- a/index.html
+++ b/index.html
@@ -141,6 +141,18 @@ var _hmt = _hmt || [];
                                 <div id="thumbs" class="navigation">
                                   <ul class="thumbs noscript">
 
+                                 <li> <a class="thumb" name="leaf" href="images/pub-big-8.jpg" title="Title #0" width="464" height="367"> <img alt="" src="images/pub-8.png" width="227" height="147"/> </a>
+                                    <div class="caption">
+                                      <h3> &bull; A cross-domain adaptation paper is accepted by AAAI 2018</h3>
+                                      <h3> &bull; 1篇有关跨域迁移学习的长文被AAAI 2018 接收</h3>
+                                      <p>[2017-11-28]</p>
+                                      <div class="image-desc">
+                                        <p>Si Liu, Yao Sun, Defa Zhu, Guanghui Ren, Yu Chen, Jiashi Feng, and Jizhong Han, Cross-domain Human Parsing via Adversarial Feature and Label Adaptation, AAAI 2018 [<a href="pdf/17058-72879-2-SM.pdf">Full paper</a>]</p>
+                                        </div>
+                                    </div>
+                                  </li>
+
+
                                    <li> <a class="thumb" name="leaf" href="images/pub-big-7.jpg" title="Title #0" width="464" height="367"> <img alt="" src="images/pub-7.png" width="227" height="147"/> </a>
                                       <div class="caption">
                                         <h3> &bull; Three full papers and two demo papers are accepted by ACM MM 2017</h3>
