fix the index page

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ var _hmt = _hmt || [];
                                 <div id="thumbs" class="navigation">
                                   <ul class="thumbs noscript">
 
-                                 <li> <a class="thumb" name="leaf" href="images/pub-big-8.jpg" title="Title #0" width="464" height="367"> <img alt="" src="images/pub-8.png" width="227" height="147"/> </a>
+                                 <li> <a class="thumb" name="leaf" href="images/pub-big-8.png" title="Title #0" width="464" height="367"> <img alt="" src="images/pub-8.png" width="227" height="147"/> </a>
                                     <div class="caption">
                                       <h3> &bull; A cross-domain adaptation paper is accepted by AAAI 2018</h3>
                                       <h3> &bull; 1篇有关跨域迁移学习的长文被AAAI 2018 接收</h3>
