fix the index page

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ var _hmt = _hmt || [];
                                   </li>
 
 
-                                   <li> <a class="thumb" name="leaf" href="images/pub-big-7.jpg" title="Title #0" width="464" height="367"> <img alt="" src="images/pub-7.png" width="227" height="147"/> </a>
+                                   <li  class="extra"> <a class="thumb" name="leaf" href="images/pub-big-7.jpg" title="Title #0" width="464" height="367"> <img alt="" src="images/pub-7.png" width="227" height="147"/> </a>
                                       <div class="caption">
                                         <h3> &bull; Three full papers and two demo papers are accepted by ACM MM 2017</h3>
                                         <h3> &bull; 3篇长文和2篇demo论文被ACM MM 2017 接收</h3>
