fix some links in publication

--- a/publication_2016.html
+++ b/publication_2016.html
@@ -83,10 +83,10 @@ var _hmt = _hmt || [];
 
 
 <p>------------------------ Conference Papers ------------------------</p>
-<p> 1. Wenqi Ren, Si Liu, Hua Zhang, Jianshan Pan, Xiaochun Cao, Ming-Hsuan Yang, Single Image Dehazing via Multi-Scale Convolutional Neural Networks, ECCV 2016. [<a href="pdf/dehaze-eccv-2016.pdf.pdf">Paper</a>]</p>
+<p> 1. Wenqi Ren, Si Liu, Hua Zhang, Jianshan Pan, Xiaochun Cao, Ming-Hsuan Yang, Single Image Dehazing via Multi-Scale Convolutional Neural Networks, ECCV 2016. [<a href="pdf/dehaze-eccv-2016.pdf">Paper</a>]</p>
 <p> 2. Xinyu Ou, Si Liu, Xiaochun Cao, Hefei Ling. Beauty eMakeup: a Deep Makeup Transfer System. ACM MM demo [demo]. [<a href="pdf/Beauty-MM-2016.pdf">Paper</a>]</p>
 <p> 3. Xinyu Ou, Zhen Wei, Si Liu, Xiaochun Cao, Hefei Ling, Deep Multi-Context Network for Fine-Grained Visual Recognition, ICME  2016, Grand Challenge [<a href="pdf/Fine-Grained-icme-2016.pdf">Paper</a>]</p>
-<p> 4. Si Liu, Xinyu Ou, Ruihe Qian, Wei Wang and Xiaochun Cao, Makeup like a superstar: Deep Localized Makeup Transfer Network, IJCAI 2016 [<a href="pdf/makeup-ijcai-2016.pdf.pdf">Paper</a>]</p>
+<p> 4. Si Liu, Xinyu Ou, Ruihe Qian, Wei Wang and Xiaochun Cao, Makeup like a superstar: Deep Localized Makeup Transfer Network, IJCAI 2016 [<a href="pdf/makeup-ijcai-2016.pdf">Paper</a>]</p>
 <p> 5.	Si Liu, Tianzhu Zhang, Changsheng Xu, and Xiaochun Cao, Structural Correlation Filter for Robust Visual Tracking, CVPR 2016 [<a href="pdf/Structural-cvpr-16.pdf">Paper</a>]</p>
 <p> 6.	Hua Zhang, Si Liu, Changqing Zhang, Wenqi Ren, Xiaochun Cao, SketchNet: Sketch Classification with Web Images, CVPR 2016 [<a href="pdf/sketchnet-cvpr-2016.pdf">Paper</a>]</p>
 <div class="clear">
