--- a/seminar.html
+++ b/seminar.html
@@ -79,6 +79,87 @@ var _hmt = _hmt || [];
                                   <td><strong>Speakers</strong></td>
                                   <td><strong>Topic & Slides</strong></td>
                                 </tr>
+                                <!--Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
+                                <tr>
+                                  <td><p> Saturday, 16 December 2017, 19:00</p></td>
+                                  <td><small>Lejian Ren(任乐健)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1dFyFEr3"> Real-time single image and video super-resolution using an efficient sub-pixel convolutional neural network </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Saturday, 16 December 2017, 19:00</p></td>
+                                  <td><small>Chen Gao(高晨)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1jHRv4u6"> 2017 coco instance segmentation challenge winner method </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Saturday, 16 December 2017, 19:00</p></td>
+                                  <td><small>Tianrui Hui(惠天瑞)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1kUDgwmz"> R-FCN-3000 at 30fps: Decoupling Detection and Classification </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Saturday, 16 December 2017, 19:00</p></td>
+                                  <td><small>Renda Bao(包仁达)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1sloNRiP"> Progressive Growing of GANs for Improved Quality, Stability, and Variation </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Wednesday, 13 December 2017, 19:00</p></td>
+                                  <td><small>Defa Zhu(朱德发)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1kUOBIw3"> StarGAN: Unified Generative Adversarial Networks for Multi-Domain Image-to-Image Translation </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Wednesday, 13 December 2017, 19:00</p></td>
+                                  <td><small>Guanghui Ren(任广辉)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1pK7861t"> Dynamic Routing Between Capsules </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Tuesday, 5 December 2017, 19:00</p></td>
+                                  <td><small>Han Yu(庾涵)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1nuYGWGT"> Real-Time User-Guided Image Colorization with Learned Deep Priors </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Tuesday, 5 December 2017, 19:00</p></td>
+                                  <td><small>Chen Gao(高晨);<br/>Tianrui Hui(惠天瑞)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1jH6wOMa"> Learning to Segment Every Thing </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Tuesday, 5 December 2017, 19:00</p></td>
+                                  <td><small>Shaofei Huang(黄少飞)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1pKBCst1"> Identity-aware textual-visual matching with latent co-attention </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Tuesday, 5 December 2017, 19:00</p></td>
+                                  <td><small>Ruihe Qian(钱瑞和)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1hsF476O"> Learning Selfie-Friendly Abstraction from Artistic Style Images </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Friday, 24 November 2017, 19:00</p></td>
+                                  <td><small>Xiaofan Cai(蔡晓帆)</small></td>
+                                  <td><i><a href=""> Model Compression </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Friday, 24 November 2017, 19:00</p></td>
+                                  <td><small>Ruihe Qian(钱瑞和);<br/>Tianrui Hui(惠天瑞);Shaofei Huang(黄少飞)<br/></small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1i5cmPUH"> Spectral Normalization for Generative Adversarial Networks </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Saturday, 4 November 2017, 14:00</p></td>
+                                  <td><small>Renda Bao(包仁达)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1qXZWJAO"> Makeup-Go: Blind Reversion of Portrait Edit </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Saturday, 4 November 2017, 19:00</p></td>
+                                  <td><small>Han Yu(庾涵)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1i5CKIwt"> Where and Who? Automatic Semantic-Aware Person Composition</a> and <a href="https://pan.baidu.com/s/1o7TVkFK"> Deep Semantics-Aware Photo Adjustment </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Saturday, 4 November 2017, 19:00</p></td>
+                                  <td><small>Yue Liao(廖越)</small></td>
+                                  <td><i><a href=""> Focal Loss for Dense Object Detection </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Saturday, 4 November 2017, 19:00</p></td>
+                                  <td><small>Tianrui Hui(惠天瑞)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1o8LxTwe"> Pose2Instance: Harnessing Keypoints for Person Instance Segmentation </a></i></td>
+                                </tr>
                                 <tr>
                                   <td><p> Thursday, 12 October 2017, 19:00</p></td>
                                   <td><small>Han Yu(庾涵)</small></td>
@@ -91,7 +172,7 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <tr>
                                   <td><p> Thursday, 12 October 2017, 19:00</p></td>
-                                  <td><small>Renda Bao(任乐健)</small></td>
+                                  <td><small>Lejian Ren(任乐健)</small></td>
                                   <td><i><a href="http://pan.baidu.com/s/1nuK0hML"> HydraPlus-Net: Attentive Deep Features for Pedestrian Analysis </a></i></td>
                                 </tr>
                                 <tr>
