--- a/seminar.html
+++ b/seminar.html
@@ -153,7 +153,7 @@ var _hmt = _hmt || [];
                                 <tr>
                                   <td><p> Saturday, 4 November 2017, 19:00</p></td>
                                   <td><small>Yue Liao(廖越)</small></td>
-                                  <td><i><a href=""> Focal Loss for Dense Object Detection </a></i></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1pLr9LDD"> Focal Loss for Dense Object Detection </a></i></td>
                                 </tr>
                                 <tr>
                                   <td><p> Saturday, 4 November 2017, 19:00</p></td>
