fix the seminar page

--- a/seminar.html
+++ b/seminar.html
@@ -137,7 +137,7 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <tr>
                                   <td><p> Friday, 24 November 2017, 19:00</p></td>
-                                  <td><small>Ruihe Qian(钱瑞和);<br/>Tianrui Hui(惠天瑞);Shaofei Huang(黄少飞)<br/></small></td>
+                                  <td><small.extra>Ruihe Qian(钱瑞和);<br/>Tianrui Hui(惠天瑞);<br/>Shaofei Huang(黄少飞)</small.extra></td>
                                   <td><i><a href="https://pan.baidu.com/s/1i5cmPUH"> Spectral Normalization for Generative Adversarial Networks </a></i></td>
                                 </tr>
                                 <tr>
