update the seminar

--- a/seminar.html
+++ b/seminar.html
@@ -79,7 +79,27 @@ var _hmt = _hmt || [];
                                   <td><strong>Speakers</strong></td>
                                   <td><strong>Topic & Slides</strong></td>
                                 </tr>
-                                <!--Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
+                                <!--Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
+                                <tr>
+                                  <td><p> Wednesday, 20 December 2017, 19:00</p></td>
+                                  <td><small>Defa Zhu(朱德发)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1kUBeHbp"> eye in-painting with exemplar generative adversarial networks </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Wednesday, 20 December 2017, 19:00</p></td>
+                                  <td><small>Yue Liao(廖越)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1miOkbgO"> AlignedReID: Surpassing Human-Level Performance in Person Re-Identification </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Wednesday, 20 December 2017, 19:00</p></td>
+                                  <td><small>Xiaofan Cai(蔡晓帆)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1c2Ne1aS"> Channel Pruning for Accelerating Very Deep Neural Networks </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Wednesday, 20 December 2017, 19:00</p></td>
+                                  <td><small>Shaofei Huang(黄少飞)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1kUVx4zl"> learning to generate and edit hairstyles</a></i></td>
+                                </tr>
                                 <tr>
                                   <td><p> Saturday, 16 December 2017, 19:00</p></td>
                                   <td><small>Lejian Ren(任乐健)</small></td>
