--- a/seminar.html
+++ b/seminar.html
@@ -79,7 +79,27 @@ var _hmt = _hmt || [];
                                   <td><strong>Speakers</strong></td>
                                   <td><strong>Topic & Slides</strong></td>
                                 </tr>
-                                <!--Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
+                                <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
+                                <tr>
+                                  <td><p> Saturday, 23 December 2017, 14:00</p></td>
+                                  <td><small>Han Yu(庾涵)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1slOGg01"> weakly- and self-supervised learning for content-aware deep image retargeting </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Sarturday, 23 December 2017, 14:00</p></td>
+                                  <td><small>Chen Gao(高晨)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1jItMjT8"> MaskLab: Instance Segmentation by Refining Object Detection with Semantic and Direction Features </a></i></td>
+                                </tr>s
+                                <tr>
+                                  <td><p> Sarturday, 23 December 2017, 14:00</p></td>
+                                  <td><small>Lejian Ren(任乐健)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1eSKYG9c"> Learning Object Interactions and Descriptions for Semantic Image Segmentation </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Saturday, 23 December 2017, 14:00</p></td>
+                                  <td><small>Guanghui Ren(任广辉)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1boGKPRL"> Light-Head R-CNN: In Defense of Two-Stage Object Detector </a></i></td>
+                                </tr>
                                 <tr>
                                   <td><p> Wednesday, 20 December 2017, 19:00</p></td>
                                   <td><small>Defa Zhu(朱德发)</small></td>
