--- a/seminar.html
+++ b/seminar.html
@@ -481,7 +481,18 @@ var _hmt = _hmt || [];
                                   <tr>
                                   <td><p> Sunday, 16 October 2016, 13:00 </p></td>
                                   <td><small>Jiajun Gao(高佳俊) </small></td>
-                                  <td><i><a href="https://pan.baidu.com/s/1jH9wRlW">Multi-Person Pose Estimation with Local Joint-to-Person Associations.  </a></i></td> </tr>
+                                  <td><i><a href="https://pan.baidu.com/s/1jH9wRlW">Multi-Person Pose Estimation with Local Joint-to-Person Associations  </a></i></td> </tr>
+                                  <tr>
+                                  <td><p> Wednesday, 3 January 2018, 19:00 </p></td>
+                                  <td><small>Xiaofan Cai(蔡晓帆) </small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1bpjlCPx">Spatial As Deep: Spatial CNN for Traffic Scene Understanding  </a></i></td> </tr>
+                                  <tr>
+                                  <td><p> Wednesday, 3 January 2018, 19:00 </p></td>
+                                  <td><small>Lejian Ren(任乐健) </small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1eStpbbk">Data Distillation: Towards Omni-Supervised Learning  </a></i></td> </tr>
+                                  <td><p> Wednesday, 3 January 2018, 19:00 </p></td>
+                                  <td><small>Han Yu(庾涵) </small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1c19rOK4">1.Unsupervised Learning of Stereo Matching <br> 2.微软做了什么 <br> 3.Context-Aware Saliency Detection </a></i></td> </tr>
                               </table>
                             </div>
                           </div>
