update the seminar

--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,34 @@ var _hmt = _hmt || [];
                                   <td><strong>Topic & Slides</strong></td>
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
+
+                                <tr>
+                                <td><p> Wednesday, 3 January 2018, 19:00 </p></td>
+                                <td><small>Xiaofan Cai(蔡晓帆) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1bpjlCPx">Spatial As Deep: Spatial CNN for Traffic Scene Understanding  </a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 3 January 2018, 19:00 </p></td>
+                                <td><small>Lejian Ren(任乐健) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1eStpbbk">Data Distillation: Towards Omni-Supervised Learning  </a></i></td> </tr>
+                                <td><p> Wednesday, 3 January 2018, 19:00 </p></td>
+                                <td><small>Han Yu(庾涵) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1c19rOK4">1.Unsupervised Learning of Stereo Matching <br> 2.微软做了什么 <br> 3.Context-Aware Saliency Detection </a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 27 December 2017, 19:00 </p></td>
+                                <td><small>Ruihe Qian(钱瑞和) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1eSKZrgQ">Learning Deep Neural Networks for Vehicle Re-ID with Visual-spatio-temporal Path Proposals </a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 27 December 2017, 19:00 </p></td>
+                                <td><small>Tianrui Hui(惠天瑞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1hsjbBso">End-to-end Recovery of Human Shape and Pose </a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 27 December 2017, 19:00 </p></td>
+                                <td><small>Yue Liao(廖越) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1pLEBrmV">SSGAN: Secure Steganography Based on Generative Adversarial Networks </a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 27 December 2017, 19:00 </p></td>
+                                <td><small>Defa Zhu(朱德发) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1dFGXD2x">Are GANs Created Equal? A Large-Scale Study </a></i></td> </tr>
                                 <tr>
                                   <td><p> Saturday, 23 December 2017, 14:00</p></td>
                                   <td><small>Han Yu(庾涵)</small></td>
@@ -482,17 +510,7 @@ var _hmt = _hmt || [];
                                   <td><p> Sunday, 16 October 2016, 13:00 </p></td>
                                   <td><small>Jiajun Gao(高佳俊) </small></td>
                                   <td><i><a href="https://pan.baidu.com/s/1jH9wRlW">Multi-Person Pose Estimation with Local Joint-to-Person Associations  </a></i></td> </tr>
-                                  <tr>
-                                  <td><p> Wednesday, 3 January 2018, 19:00 </p></td>
-                                  <td><small>Xiaofan Cai(蔡晓帆) </small></td>
-                                  <td><i><a href="https://pan.baidu.com/s/1bpjlCPx">Spatial As Deep: Spatial CNN for Traffic Scene Understanding  </a></i></td> </tr>
-                                  <tr>
-                                  <td><p> Wednesday, 3 January 2018, 19:00 </p></td>
-                                  <td><small>Lejian Ren(任乐健) </small></td>
-                                  <td><i><a href="https://pan.baidu.com/s/1eStpbbk">Data Distillation: Towards Omni-Supervised Learning  </a></i></td> </tr>
-                                  <td><p> Wednesday, 3 January 2018, 19:00 </p></td>
-                                  <td><small>Han Yu(庾涵) </small></td>
-                                  <td><i><a href="https://pan.baidu.com/s/1c19rOK4">1.Unsupervised Learning of Stereo Matching <br> 2.微软做了什么 <br> 3.Context-Aware Saliency Detection </a></i></td> </tr>
+
                               </table>
                             </div>
                           </div>
