--- a/seminar.html
+++ b/seminar.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<!-- saved from url=(0049)file:///home/fange121/%E6%A1%8C%E9%9D%A2/tmp.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>S-Lab</title>
-<meta charset="utf-8">
-<link href="css/reset.css" rel="stylesheet" type="text/css" />
-<link href="css/layout.css" rel="stylesheet" type="text/css" />
-<link href="css/style.css" rel="stylesheet" type="text/css" />
-<script>
+
+<link href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/css/reset.css" rel="stylesheet" type="text/css">
+<link href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/css/layout.css" rel="stylesheet" type="text/css">
+<link href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/css/style.css" rel="stylesheet" type="text/css">
+<script src="https://hm.baidu.com/hm.js?7b04bc59130b63646c29f35485a86d97"></script><script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
@@ -15,10 +15,10 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
-<script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
-<script type="text/javascript" src="js/cufon-yui.js"></script>
-<script type="text/javascript" src="js/FuturisExtra_400.font.js"></script>
-<script type="text/javascript" src="js/cufon-replace.js"></script>
+<script type="text/javascript" src="file:///home/fange121/%E6%A1%8C%E9%9D%A2/js/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="file:///home/fange121/%E6%A1%8C%E9%9D%A2/js/cufon-yui.js"></script>
+<script type="text/javascript" src="file:///home/fange121/%E6%A1%8C%E9%9D%A2/js/FuturisExtra_400.font.js"></script>
+<script type="text/javascript" src="file:///home/fange121/%E6%A1%8C%E9%9D%A2/js/cufon-replace.js"></script>
 <!--[if lt IE 7]>
      <script type="text/javascript" src="js/ie_png.js"></script>
      <script type="text/javascript">
@@ -39,8 +39,8 @@ var _hmt = _hmt || [];
         <!-- header -->
         <div id="header-bg">
           <header>
-            <h1><a href="index.html"><span>webstudio</span></a></h1>
-             <a href="#" id=""></a> </header>
+            <h1><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/index.html"><span>webstudio</span></a></h1>
+             <a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/tmp.html#" id=""></a> </header>
         </div>
         <!-- content -->
         <div id="content-bg">
@@ -50,15 +50,15 @@ var _hmt = _hmt || [];
                 <article id="column-left">
                   <nav>
                     <ul>
-                       <li><a href="index.html">Home</a></li>
-                      <li><a href="about.html">About</a></li>
-                      <li><a href="people.html">People</a></li>
-                      <li ><a href="publication.html">Publication</a></li>
-                      <li ><a href="projects.html">Projects</a></li>
-                     <li class="act"><a href="seminar.html">Group seminar</a></li>
-                      <li><a href="recruitment.html">Recruitment</a></li>
-                      <li><a href="life.html">Life</a></li>
-                      <li><a href="contacts.html">Contacts</a></li>
+                       <li><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/index.html">Home</a></li>
+                      <li><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/about.html">About</a></li>
+                      <li><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/people.html">People</a></li>
+                      <li><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/publication.html">Publication</a></li>
+                      <li><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/projects.html">Projects</a></li>
+                     <li class="act"><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/seminar.html">Group seminar</a></li>
+                      <li><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/recruitment.html">Recruitment</a></li>
+                      <li><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/life.html">Life</a></li>
+                      <li><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/contacts.html">Contacts</a></li>
                     </ul>
                   </nav>
                 </article>
@@ -72,12 +72,11 @@ var _hmt = _hmt || [];
                               <h2 class="extra">Group Seminar</h2>
 
 
-                              <div class="clear"></div>
-                              <table class="table-blog">
-                                <tr>
-                                  <td><strong class="extra"> Date & Time</strong></td>
+                              <div class="clear"></div><table class="table-blog">
+                                <tbody><tr>
+                                  <td><strong class="extra"> Date &amp; Time</strong></td>
                                   <td><strong>Speakers</strong></td>
-                                  <td><strong>Topic & Slides</strong></td>
+                                  <td><strong>Topic &amp; Slides</strong></td>
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
 
@@ -89,7 +88,7 @@ var _hmt = _hmt || [];
                                 <td><p> Wednesday, 3 January 2018, 19:00 </p></td>
                                 <td><small>Lejian Ren(任乐健) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1eStpbbk">Data Distillation: Towards Omni-Supervised Learning  </a></i></td> </tr>
-                                <td><p> Wednesday, 3 January 2018, 19:00 </p></td>
+                                <tr><td><p> Wednesday, 3 January 2018, 19:00 </p></td>
                                 <td><small>Han Yu(庾涵) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1c19rOK4">1.Unsupervised Learning of Stereo Matching <br> 2.微软做了什么 <br> 3.Context-Aware Saliency Detection </a></i></td> </tr>
                                 <tr>
@@ -117,8 +116,7 @@ var _hmt = _hmt || [];
                                   <td><p> Sarturday, 23 December 2017, 14:00</p></td>
                                   <td><small>Chen Gao(高晨)</small></td>
                                   <td><i><a href="https://pan.baidu.com/s/1jItMjT8"> MaskLab: Instance Segmentation by Refining Object Detection with Semantic and Direction Features </a></i></td>
-                                </tr>s
-                                <tr>
+                                </tr><tr>
                                   <td><p> Sarturday, 23 December 2017, 14:00</p></td>
                                   <td><small>Lejian Ren(任乐健)</small></td>
                                   <td><i><a href="https://pan.baidu.com/s/1eSKYG9c"> Learning Object Interactions and Descriptions for Semantic Image Segmentation </a></i></td>
@@ -185,7 +183,7 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <tr>
                                   <td><p> Tuesday, 5 December 2017, 19:00</p></td>
-                                  <td><small>Chen Gao(高晨);<br/>Tianrui Hui(惠天瑞)</small></td>
+                                  <td><small>Chen Gao(高晨);<br>Tianrui Hui(惠天瑞)</small></td>
                                   <td><i><a href="https://pan.baidu.com/s/1jH6wOMa"> Learning to Segment Every Thing </a></i></td>
                                 </tr>
                                 <tr>
@@ -201,11 +199,11 @@ var _hmt = _hmt || [];
                                 <tr>
                                   <td><p> Friday, 24 November 2017, 19:00</p></td>
                                   <td><small>Xiaofan Cai(蔡晓帆)</small></td>
-                                  <td><i><a href=""> Model Compression </a></i></td>
+                                  <td><i><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/tmp.html"> Model Compression </a></i></td>
                                 </tr>
                                 <tr>
                                   <td><p> Friday, 24 November 2017, 19:00</p></td>
-                                  <td><small.extra>Ruihe Qian(钱瑞和);<br/>Tianrui Hui(惠天瑞);<br/>Shaofei Huang(黄少飞)</small.extra></td>
+                                  <td><small.extra>Ruihe Qian(钱瑞和);<br>Tianrui Hui(惠天瑞);<br>Shaofei Huang(黄少飞)</small.extra></td>
                                   <td><i><a href="https://pan.baidu.com/s/1i5cmPUH"> Spectral Normalization for Generative Adversarial Networks </a></i></td>
                                 </tr>
                                 <tr>
@@ -235,7 +233,7 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <tr>
                                   <td><p> Thursday, 12 October 2017, 19:00</p></td>
-                                  <td><small>Chen Gao(高晨);<br/>Tianrui Hui(惠天瑞)</small></td>
+                                  <td><small>Chen Gao(高晨);<br>Tianrui Hui(惠天瑞)</small></td>
                                   <td><i><a href="http://pan.baidu.com/s/1sla6Ylv"> Detangling People: Individuating Multiple Close People and Their Body Parts via Region Assembly </a></i></td>
                                 </tr>
                                 <tr>
@@ -394,7 +392,7 @@ var _hmt = _hmt || [];
                                 <tr>
                                   <td><p> Saturday, 31 December 2016, 14:00</p></td>
                                   <td><small>Ren Lejian(任乐建)</small></td>
-                                  <td><i><a href="#"> Densely Connected Convolutional Networks  </a></i></td>
+                                  <td><i><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/tmp.html#"> Densely Connected Convolutional Networks  </a></i></td>
                                 </tr>
                                 <tr>
                                   <td><p> Saturday, 31 December 2016, 14:00</p></td>
@@ -441,7 +439,7 @@ var _hmt = _hmt || [];
                                    <tr>
                                   <td><p> Sunday, 10 December 2016, 14:00 </p></td>
                                   <td><small>Yu Han(庾涵)</small></td>
-                                  <td><i><a href="#"> Controlling Perceptual Factors in Neural Style Transfer  </a></i></td>
+                                  <td><i><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/tmp.html#"> Controlling Perceptual Factors in Neural Style Transfer  </a></i></td>
                                   </tr>
 
                                    <tr>
@@ -463,7 +461,7 @@ var _hmt = _hmt || [];
                                    <tr>
                                   <td><p> Sunday, 04 December 2016, 14:00 </p></td>
                                   <td><small>Wei Zhen(魏震)</small></td>
-                                  <td><i><a href="#"> semantic segmentation using adversarial networks . </a></i></td> </tr>
+                                  <td><i><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/tmp.html#"> semantic segmentation using adversarial networks . </a></i></td> </tr>
                                   <tr>
                                   <td><p> Sunday, 26 November 2016, 14:00 </p></td>
                                   <td><small>Liu Si(刘偲)</small></td>
@@ -480,7 +478,7 @@ var _hmt = _hmt || [];
                                    <tr>
                                   <td><p> Sunday, 26 November 2016, 14:00 </p></td>
                                   <td><small>Qian Ruihe(钱瑞和)</small></td>
-                                  <td><i><a href="#"> Pose Estimation and Segmentation of Multiple People in Stereoscopic Movies. </a></i></td> </tr>
+                                  <td><i><a href="file:///home/fange121/%E6%A1%8C%E9%9D%A2/tmp.html#"> Pose Estimation and Segmentation of Multiple People in Stereoscopic Movies. </a></i></td> </tr>
 
                                   <tr>
                                   <td><p> Sunday, 16 October 2016, 13:00 </p></td>
@@ -511,7 +509,7 @@ var _hmt = _hmt || [];
                                   <td><small>Jiajun Gao(高佳俊) </small></td>
                                   <td><i><a href="https://pan.baidu.com/s/1jH9wRlW">Multi-Person Pose Estimation with Local Joint-to-Person Associations  </a></i></td> </tr>
 
-                              </table>
+                              </tbody></table>
                             </div>
                           </div>
                         </div>
@@ -530,7 +528,7 @@ var _hmt = _hmt || [];
               <div class="wrapper">
                 <div class="block-1">
                   <dl class="list-1">
-                    <dt>  <img src="images/iie_cas.gif" /></dt>
+                    <dt>  <img src="file:///home/fange121/%E6%A1%8C%E9%9D%A2/images/iie_cas.gif"></dt>
 
                   </dl>
                   <p>
@@ -552,5 +550,6 @@ var _hmt = _hmt || [];
   </div>
 </div>
 <script type="text/javascript"> Cufon.now(); </script>
-</body>
-</html>
+
+
+</body></html>
