--- a/seminar.html
+++ b/seminar.html
@@ -70,8 +70,6 @@ var _hmt = _hmt || [];
                           <div class="inner">
                             <div class="wrapper">
                               <h2 class="extra">Group Seminar</h2>
-
-
                               <div class="clear"></div>
                               <table class="table-blog">
                                 <tr>
@@ -82,6 +80,18 @@ var _hmt = _hmt || [];
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
 
                                 <tr>
+                                <td><p> Saturday, 6 January 2018, 14:00 </p></td>
+                                <td><small>Guanghui Ren(任广辉) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1miOQWRY">Structure-measure: A New Way to Evaluate Foreground Maps  </a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 6 January 2018, 14:00 </p></td>
+                                <td><small>Defa Zhu(朱德发)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1miGJ7QC">Sparse Smart Contours to Represent and Edit Images  </a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 6 January 2018, 14:00 </p></td>
+                                <td><small>Renda Bao(包仁达)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1miL3oDU">Deeply Supervised Salient Object Detection with Short Connections </a></i></td> </tr>
+                                <tr>
                                 <td><p> Wednesday, 3 January 2018, 19:00 </p></td>
                                 <td><small>Xiaofan Cai(蔡晓帆) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1bpjlCPx">Spatial As Deep: Spatial CNN for Traffic Scene Understanding  </a></i></td> </tr>
@@ -89,6 +99,7 @@ var _hmt = _hmt || [];
                                 <td><p> Wednesday, 3 January 2018, 19:00 </p></td>
                                 <td><small>Lejian Ren(任乐健) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1eStpbbk">Data Distillation: Towards Omni-Supervised Learning  </a></i></td> </tr>
+                                <tr>
                                 <td><p> Wednesday, 3 January 2018, 19:00 </p></td>
                                 <td><small>Han Yu(庾涵) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1c19rOK4">1.Unsupervised Learning of Stereo Matching <br> 2.微软做了什么 <br> 3.Context-Aware Saliency Detection </a></i></td> </tr>
