--- a/seminar.html
+++ b/seminar.html
@@ -78,7 +78,10 @@ var _hmt = _hmt || [];
                                   <td><strong>Topic & Slides</strong></td>
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
-
+                                <tr>
+                                <td><p> Saturday, 6 January 2018, 14:00 </p></td>
+                                <td><small>Yue Liao(廖越) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1hud8DW4">Illuminating Pedestrians via Simultaneous Detection  </a></i></td> </tr>
                                 <tr>
                                 <td><p> Saturday, 6 January 2018, 14:00 </p></td>
                                 <td><small>Guanghui Ren(任广辉) </small></td>
