--- a/seminar.html
+++ b/seminar.html
@@ -79,6 +79,18 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Wednesday, 10 January 2018, 19:00 </p></td>
+                                <td><small>Lejian Ren(任乐健) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1nwfQi0L">Anti-Makeup: Learning A Bi-Level Adversarial Network for Makeup-Invariant Face Verification  </a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 10 January 2018, 19:00 </p></td>
+                                <td><small>Chen Gao(高晨) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1cNVEA6">SceneCut: Joint Geometric and Object Segmentation for Indoor Scenes  </a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 10 January 2018, 19:00 </p></td>
+                                <td><small>Weibo Zhang(张卫博) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1nwDGeZf">1.Learning to Detect Human-Object Interactions<br>2.Detecting and Recognizing Human-Object Interactions  </a></i></td> </tr>
+                                <tr>
                                 <td><p> Saturday, 6 January 2018, 14:00 </p></td>
                                 <td><small>Yue Liao(廖越) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1hud8DW4">Illuminating Pedestrians via Simultaneous Detection  </a></i></td> </tr>
