--- a/seminar.html
+++ b/seminar.html
@@ -79,6 +79,14 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Saturday, 13 January 2018, 14:00 </p></td>
+                                <td><small>Defa Zhu(朱德发) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1eT3LgT8">High-Resolution Image Synthesis and Semantic Manipulation with Conditional GANs </a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 13 January 2018, 14:00 </p></td>
+                                <td><small>Xiaofan Cai(蔡晓帆) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1sm4eFdN">1.One-Shot Video Object Segmentation<br>2.DAVIS </a></i></td> </tr>
+                                <tr>
                                 <td><p> Wednesday, 10 January 2018, 19:00 </p></td>
                                 <td><small>Lejian Ren(任乐健) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1nwfQi0L">Anti-Makeup: Learning A Bi-Level Adversarial Network for Makeup-Invariant Face Verification  </a></i></td> </tr>
