--- a/seminar.html
+++ b/seminar.html
@@ -80,12 +80,24 @@ var _hmt = _hmt || [];
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
                                 <td><p> Saturday, 13 January 2018, 14:00 </p></td>
+                                <td><small>Renda Bao(包仁达) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1o9ub0U2">A survey of makeup </a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 13 January 2018, 14:00 </p></td>
+                                <td><small>Shaofei Huang(黄少飞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1dEIFk6">Shadow Detection With Conditional Generative Adversarial Networks </a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 13 January 2018, 14:00 </p></td>
                                 <td><small>Defa Zhu(朱德发) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1eT3LgT8">High-Resolution Image Synthesis and Semantic Manipulation with Conditional GANs </a></i></td> </tr>
                                 <tr>
                                 <td><p> Saturday, 13 January 2018, 14:00 </p></td>
                                 <td><small>Xiaofan Cai(蔡晓帆) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1sm4eFdN">1.One-Shot Video Object Segmentation<br>2.DAVIS </a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 10 January 2018, 19:00 </p></td>
+                                <td><small>Ruihe Qian(钱瑞和) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1mjmDXPY">Evaluation of Segmentation Quality via Adaptive Composition of Reference Segmentations  </a></i></td> </tr>
                                 <tr>
                                 <td><p> Wednesday, 10 January 2018, 19:00 </p></td>
                                 <td><small>Lejian Ren(任乐健) </small></td>
