--- a/seminar.html
+++ b/seminar.html
@@ -79,19 +79,35 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
-                                <td><p> Wednesday, 17 January 2018, 16:00 </p></td>
+                                <td><p> Wednesday, 24 January 2018, 19:00 </p></td>
+                                <td><small>Xiaofan Cai(蔡晓帆) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1eaxVyu">Amazon Go </a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 24 January 2018, 19:00 </p></td>
+                                <td><small>Shaofei Huang(黄少飞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1bqEHmMV">图像质量评价标准 </a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 24 January 2018, 19:00 </p></td>
+                                <td><small>Tianrui Hui(惠天瑞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1nvZfsXb">Unsupervised Real-to-Virtual Domain Unification for End-to-End Highway Driving </a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 24 January 2018, 19:00 </p></td>
+                                <td><small>Han Yu(庾涵) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1o9S7Vvk">Fast Patch-based Style Transfer of Arbitrary Style</a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 17 January 2018, 19:00 </p></td>
                                 <td><small>Runhe Tang(杨润河) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1mjyPsLE">Large Kernel Matters --- Improve Semantic Segmenttation by Global Convolutional Network. </a></i></td> </tr>
                                 <tr>
-                                <td><p> Wednesday, 17 January 2018, 16:00 </p></td>
+                                <td><p> Wednesday, 17 January 2018, 19:00 </p></td>
                                 <td><small>Ruihe Qian(钱瑞和) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1rafu9kS">Region-based Quality Estimation Network for Large-scale Person Re-identification </a></i></td> </tr>
                                 <tr>
-                                <td><p> Wednesday, 17 January 2018, 16:00 </p></td>
+                                <td><p> Wednesday, 17 January 2018, 19:00 </p></td>
                                 <td><small>Chen Gao(高晨) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1qZsB61m">Panoptic Segmentation and COCO-Stuff: Thing and Stuff Classes in Context </a></i></td> </tr>
                                 <tr>
-                                <td><p> Wednesday, 17 January 2018, 16:00 </p></td>
+                                <td><p> Wednesday, 17 January 2018, 19:00 </p></td>
                                 <td><small>Shaofei Huang(黄少飞) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1bqkU5Y3">人脸图像保护和网纹人脸识别 </a></i></td> </tr>
                                 <tr>
